--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
                 <li>Python</li>
                 <li>SQL</li>
                 <li>Data Analysis</li>
-                <li>Machine Learning</li>
                 <li>Azure</li>
                 <li>Git & GitHub</li>
                 <li>HTML5</li>
                 <li>CSS3</li>
                 <li>JavaScript</li>
+                <li>OpenCV</li>
+                <li>Core Java</li>
+                <li>Machine Learning & AI</li>
+                <li>Problem Solving</li>
                 </ul>
         </section>
 
@@ -126,7 +129,7 @@
                     <span class="skill-button">Data Migration</span>
                     <span class="skill-button">Python</span>
                     <span class="skill-button">Threads</span>
-                    <span class="skill-button">SQL</span>
+                    <span class="skill-button">Data Handling</span>
                     <span class="skill-button">MySQL</span>
                     <span class="skill-button">PostgreSQL</span>
                 </div>
@@ -157,7 +160,7 @@
     </main>
 
     <footer class="footer">
-        <p>&copy; 2025 Devansh Vats. All rights reserved.</p>
+        <p class="footer-para">&copy; 2025 Devansh Vats. All rights reserved.</p>
     </footer>
 </body>
 </html>
